--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,14 @@
     "require": {
         "php": "^7.1 || ^8.0",
         "ext-json": "*",
-        "elasticsearch/elasticsearch": "^7.0",
-        "laravel/framework": "^5.8 || ^6.0 || >=7.0"
+        "elasticsearch/elasticsearch": "^8.0",
+        "laravel/framework": "^8 || ^9.0"
     },
     "require-dev": {
-    "phpunit/phpunit": "^7.1",
-        "mockery/mockery": "^1.1"
+        "phpunit/phpunit": "^9.1",
+        "mockery/mockery": "^1.5",
+        "orchestra/testbench": "^7.19",
+        "imdhemy/es-testing-utils": "^8.3"
     },
     "autoload": {
         "psr-4": {
